# my-agents

./: .gitignore  Makefile  README.md
.kiro/steering/: doc-sync.md  self-update.md
agents/: create-agent.json
agents/prompts/: create-agent.md
claude-commands/: create-agent.md
claude-templates/: architecture-decisions.md  coding-standards.md  doc-sync.md  sandbox-awareness.md  self-update.md
conducer/: Cargo.toml
conducer/config/: command-policy.toml  network-allowlist.toml
conducer/crates/acp-types/: Cargo.toml
conducer/crates/acp-types/src/: envelope.rs  ids.rs  lib.rs  messages.rs  tests.rs
conducer/crates/cli/: Cargo.toml
conducer/crates/cli/src/: main.rs
conducer/crates/gui/: Cargo.toml  tauri.conf.json
conducer/crates/gui/src/: commands.rs  main.rs
conducer/crates/orchestrator/: Cargo.toml
conducer/crates/orchestrator/src/: event_loop.rs  heartbeat.rs  lib.rs  llm.rs  pm_agent.rs  process_mgr.rs  router.rs  server.rs  tests.rs
conducer/crates/sandbox/: Cargo.toml
conducer/crates/sandbox/src/: lib.rs  permission.rs  policy.rs  profile.rs  tests.rs
conducer/crates/state/: Cargo.toml
conducer/crates/state/migrations/: 20260330000000_initial_schema.sql  20260330010000_epic_last_error.sql
conducer/crates/state/src/: db.rs  lib.rs  memory.rs  models.rs  queries.rs  tests.rs
conducer/crates/worker-adapter/: Cargo.toml
conducer/crates/worker-adapter/src/: claude_code.rs  lib.rs  tests.rs  worktree.rs
conducer/gui-frontend/: index.html  package-lock.json  package.json  vite.config.ts
conducer/gui-frontend/.conducer/: state.db
conducer/gui-frontend/src/: App.tsx
conducer/gui-frontend/src/components/: ActionQueue.tsx  ActivityFeed.tsx  EpicForm.tsx  FeatureCard.tsx  KanbanBoard.tsx  WorkerPanel.tsx
conducer/gui-frontend/src/hooks/: useAPI.ts  useSSE.ts
conducer/gui-frontend/src/store/: index.ts
conducer/gui-frontend/src/types/: index.ts
conducer/prompts/: pm-decompose.md  pm-review.md  pm-system.md  worker-system.md
steering-templates/: architecture-decisions.md  coding-standards.md  doc-sync.md  sandbox-awareness.md  self-update.md
