[package]
name = "conducer"
version = "0.1.0"
edition = "2024"

[dependencies]
conducer-orchestrator = { path = "../orchestrator" }
conducer-state = { path = "../state" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
