[package]
name = "conducer-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
acp-types = { path = "../acp-types" }
conducer-state = { path = "../state" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
async-stream = "0.3"
futures-core = "0.3"
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
