[package]
name = "conducer-worker-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
acp-types = { path = "../acp-types" }
conducer-sandbox = { path = "../sandbox" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
